--- a/index.html
+++ b/index.html
@@ -5,9 +5,13 @@
 <title>Sistema Profissional de Barbearia</title>
 <link rel="stylesheet" href="style.css">
 
+<!-- jsPDF -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 </head>
 <body>
+
+<!-- TOAST -->
+<div id="toast" class="toast"></div>
 
 <!-- SPLASH -->
 <div id="splash" class="splash">
@@ -27,7 +31,9 @@
     <button onclick="abrirTela('clientes')">👤</button>
     <button onclick="abrirTela('planos')">📦</button>
     <button onclick="abrirTela('servicos')">✂️</button>
+    <button onclick="abrirTela('produtos')">🧴</button>
     <button onclick="abrirTela('caixa')">💰</button>
+    <button onclick="abrirTela('relatorios')">📊</button>
   </nav>
 
   <!-- CONTEÚDO -->
@@ -36,10 +42,13 @@
     <!-- VENDAS -->
     <section id="vendas" class="tela ativa vendas-bg">
       <div class="card transparente">
-        <h2>Registrar Corte</h2>
+        <h2>Registrar Venda</h2>
+
         <select id="clienteVenda"></select>
+
         <select id="servicoVenda"></select>
-        <button onclick="registrarVenda()">Registrar</button>
+
+        <button onclick="registrarVenda()">Registrar Venda</button>
       </div>
     </section>
 
@@ -47,9 +56,14 @@
     <section id="clientes" class="tela">
       <div class="card">
         <h2>Clientes</h2>
+
         <input id="nomeCliente" placeholder="Nome do cliente">
-        <select id="planoCliente"></select>
-        <button onclick="cadastrarCliente()">Cadastrar</button>
+
+        <select id="planoCliente">
+          <option value="">Sem plano</option>
+        </select>
+
+        <button onclick="cadastrarCliente()">Cadastrar Cliente</button>
       </div>
     </section>
 
@@ -57,10 +71,12 @@
     <section id="planos" class="tela">
       <div class="card">
         <h2>Planos</h2>
+
         <input id="nomePlano" placeholder="Nome do plano">
-        <input id="qtdPlano" type="number" placeholder="Qtd cortes">
-        <input id="valorPlano" type="number" placeholder="Valor">
-        <button onclick="cadastrarPlano()">Cadastrar</button>
+        <input id="qtdPlano" type="number" placeholder="Qtd de cortes">
+        <input id="valorPlano" type="number" placeholder="Valor do plano">
+
+        <button onclick="cadastrarPlano()">Cadastrar Plano</button>
       </div>
     </section>
 
@@ -68,9 +84,23 @@
     <section id="servicos" class="tela">
       <div class="card">
         <h2>Serviços</h2>
-        <input id="nomeServico" placeholder="Serviço">
+
+        <input id="nomeServico" placeholder="Nome do serviço">
         <input id="precoServico" type="number" placeholder="Preço">
-        <button onclick="cadastrarServico()">Cadastrar</button>
+
+        <button onclick="cadastrarServico()">Cadastrar Serviço</button>
+      </div>
+    </section>
+
+    <!-- PRODUTOS -->
+    <section id="produtos" class="tela">
+      <div class="card">
+        <h2>Produtos</h2>
+
+        <input id="nomeProduto" placeholder="Nome do produto">
+        <input id="precoProduto" type="number" placeholder="Preço">
+
+        <button onclick="cadastrarProduto()">Cadastrar Produto</button>
       </div>
     </section>
 
@@ -78,17 +108,34 @@
     <section id="caixa" class="tela">
       <div class="card">
         <h2>Abertura de Caixa</h2>
+
         <input id="valorInicial" type="number" placeholder="Valor inicial">
+
         <button onclick="abrirCaixa()">Abrir Caixa</button>
       </div>
 
       <div class="card">
-        <h2>Resumo</h2>
-        <p>Inicial: R$ <span id="resInicial"></span></p>
-        <p>Vendas: R$ <span id="resVendas"></span></p>
-        <p><strong>Total: R$ <span id="resTotal"></span></strong></p>
+        <h2>Resumo do Caixa</h2>
+
+        <p>Inicial: R$ <span id="resInicial">0.00</span></p>
+        <p>Vendas: R$ <span id="resVendas">0.00</span></p>
+        <p><strong>Total: R$ <span id="resTotal">0.00</span></strong></p>
+
         <button onclick="gerarPDF()">📄 Fechar Caixa (PDF)</button>
         <button class="fechar" onclick="fecharCaixa()">Encerrar Caixa</button>
+      </div>
+    </section>
+
+    <!-- RELATÓRIOS -->
+    <section id="relatorios" class="tela">
+      <div class="card">
+        <h2>Relatórios</h2>
+
+        <button onclick="relatorio('dia')">📅 Diário</button>
+        <button onclick="relatorio('semana')">📆 Semanal</button>
+        <button onclick="relatorio('mes')">🗓️ Mensal</button>
+
+        <div id="resultadoRelatorio" style="margin-top:15px;"></div>
       </div>
     </section>
 
