--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-<!-- PATCH DEFINITIVO DO SPLASH (carrega antes de tudo) -->
+<!-- PATCH SPLASH -->
 <script>
   function entrarSistema(){
     const s=document.getElementById("splash");
@@ -17,7 +17,6 @@
   }
 </script>
 
-<!-- TOAST -->
 <div id="toast" class="toast"></div>
 
 <!-- SPLASH -->
@@ -31,10 +30,12 @@
 </div>
 
 <div class="app">
+
   <!-- MENU -->
   <nav class="menu">
     <button onclick="abrirTela('vendas')">💈</button>
     <button onclick="abrirTela('clientes')">👤</button>
+    <button onclick="abrirTela('planos')">📦</button>
     <button onclick="abrirTela('servicos')">✂️</button>
     <button onclick="abrirTela('produtos')">🧴</button>
     <button onclick="abrirTela('caixa')">💰</button>
@@ -47,12 +48,12 @@
     <!-- VENDAS -->
     <section id="vendas" class="tela ativa vendas-bg">
       <div class="card transparente">
-        <h2>Registrar Venda</h2>
+        <h2>Registrar Corte</h2>
         <select id="clienteVenda"></select>
         <select id="servicoVenda"></select>
-        <button onclick="registrarVenda()">Registrar Venda</button>
+        <button onclick="registrarVenda()">Registrar</button>
 
-        <h3>Vendas do dia</h3>
+        <h3>Vendas</h3>
         <ul id="listaVendas"></ul>
       </div>
     </section>
@@ -62,8 +63,21 @@
       <div class="card">
         <h2>Clientes</h2>
         <input id="nomeCliente" placeholder="Nome do cliente">
+        <select id="planoCliente"></select>
         <button onclick="cadastrarCliente()">Cadastrar</button>
         <ul id="listaClientes"></ul>
+      </div>
+    </section>
+
+    <!-- PLANOS -->
+    <section id="planos" class="tela">
+      <div class="card">
+        <h2>Planos Mensais</h2>
+        <input id="nomePlano" placeholder="Nome do plano">
+        <input id="qtdPlano" type="number" placeholder="Qtd de cortes">
+        <input id="valorPlano" type="number" placeholder="Valor mensal">
+        <button onclick="cadastrarPlano()">Cadastrar Plano</button>
+        <ul id="listaPlanos"></ul>
       </div>
     </section>
 
@@ -110,11 +124,8 @@
     <!-- RELATÓRIOS -->
     <section id="relatorios" class="tela">
       <div class="card">
-        <h2>Relatórios</h2>
-        <button onclick="relatorio(1)">📅 Diário</button>
-        <button onclick="relatorio(7)">📆 Semanal</button>
-        <button onclick="relatorio(30)">🗓️ Mensal</button>
-        <div id="resultadoRelatorio"></div>
+        <h2>Relatório de Planos</h2>
+        <div id="relatorioPlanos"></div>
       </div>
     </section>
 
